<resources>
    <string name="app_name">CoinBook</string>
    <string name="holdings">Holdings</string>
    <string name="internet_warning">Not connected to the internet!</string>
    <string name="assets">Total assets</string>
    <string name="asset_amount">$0.00</string>
    <string name="ticker">Ticker</string>
    <string name="news">News</string>
    <string name="markets">Markets</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="login">Login</string>
    <string name="feedback">Provide feedback</string>
</resources>
